Fixed test cases for users rspec and generate functionable docs
